mise a jour du script pour Centos. Reste deux points a faire

--- a/temporary/CentosVhost.conf
+++ b/temporary/CentosVhost.conf
@@ -1,9 +1,9 @@
-<VirtualHost *:4546>
- 	 ServerAdmin Admin
- 	 ServerName Serv
+<VirtualHost *:22>
+ 	 ServerAdmin CentosVhostAdmin
+ 	 ServerName CentosVhostName
  	 #Indexes + Directory Root
- 	 DocumentRoot ERgaet
- 	 <Directory "ERgaet">
+ 	 DocumentRoot var/www/bitume/Total-Bitume/web
+ 	 <Directory "var/www/bitume/Total-Bitume/web">
  	 # DirectoryIndex app.php
  		 Options Indexes FollowSymLinks MultiViews
  		 AllowOverride All
@@ -18,10 +18,10 @@
  	 CustomLog /var/log/httpd/access.log combined
  	 <IfModule mod_rewrite.c>
  		 RewriteEngine On
- 		 RewriteCond %{REQUEST_URI}::4546 ^(/.+)/(.*)::\2$
+ 		 RewriteCond %{REQUEST_URI}::22 ^(/.+)/(.*)::\2$
  		 RewriteRule ^(.*) - [E=BASE:%1]
  		 RewriteCond %{ENV:REDIRECT_STATUS} ^$
- 		 RewriteRule ^app\.php(/(.*)|$) %{ENV:BASE}/Admin [R=301,L]
+ 		 RewriteRule ^app\.php(/(.*)|$) %{ENV:BASE}/CentosVhostAdmin [R=301,L]
  		 RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} -f
  		 RewriteRule .. - [L]
  		 RewriteRule .. %{DOCUMENT_ROOT}%{ENV:BASE}/app.php [L]
