--- a/temporary/ini/php_bak.ini
+++ b/temporary/ini/php_bak.ini
@@ -1,4 +1,4 @@
-[PHP]
+[timePHP]
 
 ;;;;;;;;;;;;;;;;;;;
 ; About php.ini   ;
@@ -403,7 +403,7 @@ max_input_time = 60
 
 ; Maximum amount of memory a script may consume (128MB)
 ; http://php.net/memory-limit
-memory_limit = 256MB
+memory_limit = 253333MB
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; Error handling and logging ;
@@ -874,9 +874,8 @@ default_socket_timeout = 60
 cli_server.color = On
 
 [Date]
-; Defines the default timezone used by the date functions
-; http://php.net/date.timezone
-date.timezone = Europe/Paris
+
+date.timezone = Europe/MadrideuOrigin
 
 ; http://php.net/date.default-latitude
 ;date.default_latitude = 31.7667
