--- a/temporary/ini/php.ini
+++ b/temporary/ini/php.ini
@@ -1,4 +1,4 @@
-[PHP]
+[timePHP]
 
 ;;;;;;;;;;;;;;;;;;;
 ; About php.ini   ;
@@ -874,9 +874,8 @@ default_socket_timeout = 60
 cli_server.color = On
 
 [Date]
-; Defines the default timezone used by the date functions
-; http://php.net/date.timezone
-date.timezone = Europe/Paris
+
+date.timezone = Europe/MadrideuOrigin
 
 ; http://php.net/date.default-latitude
 ;date.default_latitude = 31.7667
